stopped scrollbars from appearing

--- a/src/scss/partials/_sidebar.scss
+++ b/src/scss/partials/_sidebar.scss
@@ -36,6 +36,7 @@
     height: 91%;
     width: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
     .img-sidebar{
       border-radius: 5px;
       border: 1px solid black;
