--- a/src/scss/partials/_typography.scss
+++ b/src/scss/partials/_typography.scss
@@ -16,3 +16,7 @@ body {
   top: 70px;
   margin: 0 auto;
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
